<resources>
        <string name="app_name">DAM-EXAM</string>


    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat">Repeat password</string>
    <string name="genderPicker">Select gender:</string>
    <string name="categoryPicker">Select category:</string>
    <string name="provincePicker">Select province:</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="create_account">Create Account</string>
    <string name="already_login">Already a member? Login</string>
    <string name="agreement_terms_and_conditions"> Check here to indicate that you have read and
        agree to the terms of the service </string>

    <string name="logo_description">This is the logo_url of MyCompany</string>

    <!-- EULA: Terms and conditions -->
    <string name="accept">Accept</string>
    <string name="eula_string"> <![CDATA[
        <h2>End-User License Agreement (EULA) of <span class="app_name">DAM-TIPS</span></h2>

<p>This End-User License Agreement ("EULA") is a legal agreement between you and <span class="company_name">MyCompany</span></p>

<p>This EULA agreement governs your acquisition and use of our <span class="app_name">DAM-TIPS</span> software ("Software") directly from <span class="company_name">MyCompany</span> or indirectly through a <span class="company_name">MyCompany</span> authorized reseller or distributor (a "Reseller").</p>

<p>Please read this EULA agreement carefully before completing the installation process and using the <span class="app_name">DAM-TIPS</span> software. It provides a license to use the <span class="app_name">DAM-TIPS</span> software and contains warranty information and liability disclaimers.</p>

<p>If you register for a free trial of the <span class="app_name">DAM-TIPS</span> software, this EULA agreement will also govern that trial. By clicking "accept" or installing and/or using the <span class="app_name">DAM-TIPS</span> software, you are confirming your acceptance of the Software and agreeing to become bound by the terms of this EULA agreement.</p>

<p>If you are entering into this EULA agreement on behalf of a company or other legal entity, you represent that you have the authority to bind such entity and its affiliates to these terms and conditions. If you do not have such authority or if you do not agree with the terms and conditions of this EULA agreement, do not install or use the Software, and you must not accept this EULA agreement.</p>

<p>This EULA agreement shall apply only to the Software supplied by <span class="company_name">MyCompany</span> herewith regardless of whether other software is referred to or described herein. The terms also apply to any <span class="company_name">MyCompany</span> updates, supplements, Internet-based services, and support services for the Software, unless other terms accompany those items on delivery. If so, those terms apply. This EULA was created by <a href="https://www.eulatemplate.com">EULA Template</a> for <span class="app_name">DAM-TIPS</span>.

<h3>License Grant</h3>

<p><span class="company_name">MyCompany</span> hereby grants you a personal, non-transferable, non-exclusive licence to use the <span class="app_name">DAM-TIPS</span> software on your devices in accordance with the terms of this EULA agreement.</p>

<p>You are permitted to load the <span class="app_name">DAM-TIPS</span> software (for example a PC, laptop, mobile or tablet) under your control. You are responsible for ensuring your device meets the minimum requirements of the <span class="app_name">DAM-TIPS</span> software.</p>

<p>You are not permitted to:</p>

<ul>
<li>Edit, alter, modify, adapt, translate or otherwise change the whole or any part of the Software nor permit the whole or any part of the Software to be combined with or become incorporated in any other software, nor decompile, disassemble or reverse engineer the Software or attempt to do any such things</li>
<li>Reproduce, copy, distribute, resell or otherwise use the Software for any commercial purpose</li>
<li>Allow any third party to use the Software on behalf of or for the benefit of any third party</li>
<li>Use the Software in any way which breaches any applicable local, national or international law</li>
<li>use the Software for any purpose that <span class="company_name">MyCompany</span> considers is a breach of this EULA agreement</li>
</ul>

<h3>Intellectual Property and Ownership</h3>

<p><span class="company_name">MyCompany</span> shall at all times retain ownership of the Software as originally downloaded by you and all subsequent downloads of the Software by you. The Software (and the copyright, and other intellectual property rights of whatever nature in the Software, including any modifications made thereto) are and shall remain the property of <span class="company_name">MyCompany</span>.</p>

<p><span class="company_name">MyCompany</span> reserves the right to grant licences to use the Software to third parties.</p>

<h3>Termination</h3>

<p>This EULA agreement is effective from the date you first use the Software and shall continue until terminated. You may terminate it at any time upon written notice to <span class="company_name">MyCompany</span>.</p>

<p>It will also terminate immediately if you fail to comply with any term of this EULA agreement. Upon such termination, the licenses granted by this EULA agreement will immediately terminate and you agree to stop all access and use of the Software. The provisions that by their nature continue and survive will survive any termination of this EULA agreement.</p>

<h3>Governing Law</h3>

<p>This EULA agreement, and any dispute arising out of or in connection with this EULA agreement, shall be governed by and construed in accordance with the laws of <span class="country">es</span>.</p>
        ]]> </string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="please_wait">Please wait ...</string>
    <string name="map">Map</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_maps">Map</string>
    <string name="this_icon_represents_the_type_of_the_event">This icon represents the type of the event</string>

</resources>

