<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.SignUpActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/signup_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="56dp"
            android:paddingRight="24dp"
            android:weightSum="1">

            <!-- Logo -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo" />

            <!-- Gender pickers -->

            <RadioGroup
                android:id="@+id/radioGender"
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:background="#03A9F4"
                android:orientation="horizontal"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp">

                <RadioButton
                    android:id="@+id/radioM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:buttonTint="#EFEDED"
                    android:checked="true"
                    android:drawableStart="@mipmap/ic_human_male_white_36dp"
                    android:drawableLeft="@mipmap/ic_human_male_white_36dp"
                    android:text="@string/male"
                    android:textColor="#F6F5F5"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/radioF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:buttonTint="#FFFFFF"
                    android:checked="false"
                    android:drawableStart="@mipmap/ic_human_male_white_36dp"
                    android:drawableLeft="@mipmap/ic_human_female_white_36dp"
                    android:drawableTint="#EFEEEE"
                    android:text="@string/female"
                    android:textColor="#F3F1F1"
                    android:textSize="14sp" />
            </RadioGroup>


            <!-- Username Label -->

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName" />


            <!-- Name Label -->

            <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />


            <!-- Surname Label -->

                <EditText
                    android:id="@+id/input_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:inputType="textPersonName" />



            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/repeat_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


            <CheckBox
                android:id="@+id/agreement_terms_and_conditions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/agreement_terms_and_conditions" />


            <!-- Signup Button -->
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/create_account" />

            <TextView
                android:id="@+id/link_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/already_login"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>